# voxa

./: .dockerignore  .env.example  .gitattributes  .gitignore  .prettierignore  PRD.md  README.md  Voxa_PRD_и_план_реализации.docx  docker-compose.dev.yml  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.base.json
.claude/: launch.json
.github/workflows/: ci.yml
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/server/: .env.example  Dockerfile  package.json  tsconfig.json
apps/server/prisma/: schema.prisma
apps/server/src/: app.module.ts  main.ts
apps/server/src/admin/: admin.controller.ts
apps/server/src/audit/: audit.module.ts  audit.service.ts
apps/server/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts  hibp.service.ts  tokens.service.ts
apps/server/src/channels/: channels.controller.ts  channels.module.ts  channels.service.ts
apps/server/src/common/: throttler-redis.storage.ts
apps/server/src/config/: env.ts
apps/server/src/dm/: dm-calls.service.ts  dm.controller.ts  dm.module.ts  dm.service.ts
apps/server/test/: app.e2e-spec.ts  global-setup.ts  jest-e2e.json  set-env.ts
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  i18n.ts  main.tsx  styles.css
infra/caddy/: Caddyfile
infra/livekit/: livekit.dev.yaml  livekit.yaml
scripts/: check-licenses.mjs
(+141 files in other folders)
