[package]
name = "voxa-desktop"
version = "0.1.0"
description = "Voxa — десктоп-клиент"
edition = "2021"
license = "UNLICENSED"
publish = false

[lib]
name = "voxa_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
